--- a/manuscript_figures/Figures_7_8.ipynb
+++ b/manuscript_figures/Figures_7_8.ipynb
@@ -6,14 +6,12 @@
    "id": "de3e24ca-530f-422c-a859-65fa01b41e87",
    "metadata": {},
    "source": [
-    "# All Sites Random Forest: Unloading Paper\n",
-    "# Updated Analysis Random Forest Read - PDPs\n",
-    "## Loading only the random forest model (from rerun) and taking a look at it without reruning anything\n",
-    "* second notebook to perform random forest analysis for the unloading paper\n",
-    "* look at a lot of decision trees\n",
+    "# Figures 7 and 8 \n",
+    "* Updated Analysis Random Forest Read - PDPs\n",
+    "* Loading only the random forest model (from rerun) and taking a look at it without reruning anything\n",
     "\n",
     "created by Cassie Lumbrazo\\\n",
-    "date: Nov 2025\\\n",
+    "date: Nov 2025, edited Jan 2026\\\n",
     "python environment: **randomforest**\n",
     "\n",
     "latest: running on UAS linux machine\n"
