fixing up manuscript figures, esp figure 3

--- a/manuscript_figures/Figures_7_8.ipynb
+++ b/manuscript_figures/Figures_7_8.ipynb
@@ -6,7 +6,8 @@
    "id": "de3e24ca-530f-422c-a859-65fa01b41e87",
    "metadata": {},
    "source": [
-    "# Figures 7 and 8 \n",
+    "# Unloading Manuscript\n",
+    "## Figures 7 and 8 \n",
     "* Updated Analysis Random Forest Read - PDPs\n",
     "* Loading only the random forest model (from rerun) and taking a look at it without reruning anything\n",
     "\n",
