define njobs outside of functions

--- a/manuscript_figures/Figures_7_8_manual_compute_parallel.ipynb
+++ b/manuscript_figures/Figures_7_8_manual_compute_parallel.ipynb
@@ -712,6 +712,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d79fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_jobs_num = 15  # Set to the number of CPU cores you want to use"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cb41486f",
    "metadata": {},
@@ -721,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "268fc799",
    "metadata": {},
    "outputs": [],
@@ -733,7 +743,7 @@
     "\n",
     "\n",
     "def compute_pdp_1d_parallel(\n",
-    "    model, X, feature, grid, n_jobs=15, backend=\"loky\"\n",
+    "    model, X, feature, grid, n_jobs=n_jobs_num, backend=\"loky\"\n",
     "):\n",
     "    \"\"\"\n",
     "    Parallel 1-way PDP computation.\n",
@@ -758,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "65dc132e",
    "metadata": {},
    "outputs": [],
@@ -772,7 +782,7 @@
     "\n",
     "def compute_pdp_2d_parallel(\n",
     "    model, X, feature_x, feature_y, grid_x, grid_y,\n",
-    "    n_jobs=15, backend=\"loky\"\n",
+    "    n_jobs=n_jobs_num, backend=\"loky\"\n",
     "):\n",
     "    \"\"\"\n",
     "    Parallel 2-way PDP computation.\n",
@@ -839,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e6bac8d4",
    "metadata": {},
    "outputs": [
